--- a/src/components/Reveal.css
+++ b/src/components/Reveal.css
@@ -16,9 +16,6 @@
 .reveal-image {
     height: 144px;
     width: 96px;
-}
-
-.reveal-image {
     z-index: 0;
 }
 
